[package]
name = "struct-convert"
version = "1.3.1" # refer to semver
edition = "2021"
description = "Auto Convert between structs"
authors = ["Zerounary <zerounary@163.com>"]
license = "MIT"
keywords = ["struct", "convert", "macro"]
repository = "https://github.com/Zerounary/struct-convert.git"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
anyhow = "1"
proc-macro2 = "1" # proc-macro 的封装
quote = "1" # 用于生成代码的 TokenStream
syn = { version = "1", features = ["extra-traits"] } # 用于解析 TokenStream，使用 extra-traits 可以用于 Debug
darling = "0.14.1"
itertools = "0.11.0"

derivative = "2.2.0"
time = "0.3.20"